<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_football"
        android:icon="@drawable/ic_football"
        android:title="@string/football" />
    <item
        android:id="@+id/nav_hockey"
        android:icon="@drawable/ic_hockey"
        android:title="@string/hockey" />
    <item
        android:id="@+id/nav_tennis"
        android:icon="@drawable/ic_tennis"
        android:title="@string/tennis" />
    <item
        android:id="@+id/nav_basketball"
        android:icon="@drawable/ic_basketball"
        android:title="@string/basketball" />
    <item
        android:id="@+id/nav_volleyball"
        android:icon="@drawable/ic_volleyball"
        android:title="@string/volleyball" />
    <item
        android:id="@+id/nav_cybersport"
        android:icon="@drawable/ic_cyber_sport"
        android:title="@string/cybersport" />
</menu>